--- a/SE-CWA2020ASN1-Prog/Properties/Resources.resx
+++ b/SE-CWA2020ASN1-Prog/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="musk-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\musk-logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Planet9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Planet9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
